--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Real Estate Hub Philippines</title>
+    <title>iWantPH - Philippine Real Estate Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
